# ktk

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.adoc  README.fr.adoc  README.md  build.rs  flake.nix
.cargo/: audit.toml
conf/: config.sample.yaml  theme.json
src/: config.rs  kitty.rs  kube.rs  kubeconfig.rs  main.rs  ohmyposh.rs  terminal.rs
src/terminal/: kitty.rs  tmux.rs  wezterm.rs
tests/: kitty.json  wezterm-list-clients.json  wezterm-list.json
