[package]
name = "ktk"
version = "0.15.0"
authors = ["https://framagit.org/gauthier/ktk"]
edition = "2021"
description = "Kitty Tab for Kubeconfig"
license = "MIT"
readme = "README.adoc"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.*", features = ["cargo", "string"] }
config = "0.14.*"
dirs = "5.0.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_yaml = "0.9.*"
time = "0.3.*"
skim = "0.10.*"
simplelog = { version = "0.12.*", features = ["paris"] }
log = "0.4.*"
color-print = "0.3.*"
tokio = { version = "1.37.*", features = ["full"] }
kube = { version = "0.90.0", features = ["runtime", "derive","client"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
