[package]
name = "ktk"
version = "0.19.3"
authors = ["Gauthier C. <gc@pc-scol.fr>"]
homepage = "https://framagit.org/gauthier/ktk"
repository = "https://github.com/gcpcscol/ktk"
edition = "2021"
description = "Kitty Tab for Kubeconfig"
license = "MIT"
readme = "README.adoc"
categories = ["command-line-utilities","caching"]
keywords = ["kubernetes", "cli", "kitty", "wezterm", "tmux"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ktk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.*", features = ["cargo", "string"] }
config = "0.15.*"
dirs = "5.0.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_yaml = "0.9.*"
time = "0.3.*"
skim = "0.15.*"
simplelog = { version = "0.12.*", features = ["paris"] }
log = "0.4.*"
color-print = "0.3.*"
owo-colors = "4"
csscolorparser = "0.6.2"
tokio = { version = "1.37.*", features = ["full"] }
kube = { version = "0.98.*", features = ["runtime", "derive","client"] }
k8s-openapi = { version = "0.24.*", features = ["latest"] }
regex = "1.11.*"
clap_complete = "4.5.*"
