[package]
name = "ktk"
version = "0.21.0"
authors = ["Gauthier C. <gc@pc-scol.fr>"]
homepage = "https://framagit.org/gauthier/ktk"
repository = "https://github.com/gcpcscol/ktk"
edition = "2024"
description = "Kitty Tab for Kubeconfig"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities","caching"]
keywords = ["kubernetes", "cli", "kitty", "wezterm", "tmux"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ktk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.*", features = ["cargo", "string"] }
config = "0.15.*"
dirs = "6.0.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_yaml = "0.9.*"
time = "0.3.*"
skim = "0.16.*"
simplelog = { version = "0.12.*", features = ["paris"] }
log = "0.4.*"
color-print = "0.3.*"
owo-colors = "4"
csscolorparser = "0.7.0"
palette = "0.7.6"
colorous = "1.*"
tokio = { version = "1.43.*", features = ["full"] }
kube = { version = "0.98.*", features = ["runtime", "derive","client"] }
k8s-openapi = { version = "0.24.*", features = ["latest"] }
regex = "1.11.*"
clap_complete = "4.5.*"
serde_with_macros = "3.12.0"

[build-dependencies]
chrono = "0.4.39"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ktk", dest = "/usr/bin/ktk", mode = "755" },
]
